fixed on hover issue on mobile

--- a/css/resourcesMP.css
+++ b/css/resourcesMP.css
@@ -34,21 +34,12 @@
   filter: unset;
 }
 
-.resources-list .img-card:hover .info {
-  transform: translateY(0);
-  opacity: 1;
-}
-
 .resources-list .img-card:hover .overlay {
   z-index: 3;
   position: absolute;
   width: 100%;
   height: 100%;
   background: transparent;
-}
-
-.resources-list .img-card .info h3 {
-  font-size: 1.5em;
 }
 
 .resources-list .img-card .info span {
@@ -62,6 +53,7 @@
   filter: grayscale(100%);
 }
 
+/*Media Queries for grid*/
 @media only screen and (min-width: 499px) and (max-width: 560px) {
   .resources-list {
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
@@ -106,5 +98,32 @@
   .resources-list {
     grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
     padding: 5.2rem 0rem;
+  }
+}
+
+/*Media Queries resource*/
+@media only screen and (max-width: 1024px) {
+  .resources-list .img-card .info-mobile {
+    z-index: 3;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 1.25rem;
+    color: #fff;
+    font-size: 1.2em;
+  }
+  .resources-list .img-card:hover .info-mobile {
+    opacity: 0;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .resources-list .img-card .info-mobile {
+    display: none;
+  }
+
+  .resources-list .img-card:hover .info {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
